Fix generating a seam allowance. Closes smart-pattern/valentina#36.

--- a/src/test/ValentinaTest/share/test_data.qrc
+++ b/src/test/ValentinaTest/share/test_data.qrc
@@ -115,5 +115,7 @@
         <file>Issue_604/output.json</file>
         <file>Issue_548_case1/input.json</file>
         <file>Issue_548_case1/output.json</file>
+        <file>smart_pattern_#36/input.json</file>
+        <file>smart_pattern_#36/output.json</file>
     </qresource>
 </RCC>
